--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<p>lululullulullulul&nbsp;</p>
 	
-<p><img src="hello.jpg" alt="zxw" width="450"/></p>
-	<a href="www.youtube.com" > click</a>
+<p><img src="images//hello.jpg" alt="zxw" width="450"/><img src="1585409158005-QOl8N5J430_853-1136.jpg" width="210" height="280" alt=""/></p>
+	<a href="aboutme.html" > click</a>
 </body>
 </html>
