--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 	
 <h1>Hello</h1>
-	
+	<a href="aboutme.html" > About Me</a>
 	<p>lululullulullulul&nbsp;</p>
 	
 <p><img src="images//hello.jpg" alt="zxw" width="450"/><img src="1585409158005-QOl8N5J430_853-1136.jpg" width="210" height="280" alt=""/></p>
-	<a href="aboutme.html" > click</a>
+	
 </body>
 </html>
