--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,11 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
-<h1>About me </h1>
+
 <body>
+	<h1>About me </h1>
+	<a href="index.html">Home</a>
 <img src="images/1585409158005-QOl8N5J430_853-1136.jpg" alt="dfgh" width="250">
 </body>
-	<a href="index.html">click me</a>
+	
 </html>
