--- a/aboutme.html
+++ b/aboutme.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>mon</title>
 </head>
 
 <body>
-	<h1>About me </h1>
-	<a href="index.html">Home</a>
-<img src="images/1585409158005-QOl8N5J430_853-1136.jpg" alt="dfgh" width="250">
+	<h1 style="color:blue; background-color green:">About me</h1>
+	<ul>
+		<li><a href="../F4D34_Bobo_Wong_ex03/index.html">Home</a></li>
+		<li><a href="../F4D34_Bobo_Wong_ex03/mygallery.html">Gallery</a></li>
+	</ul>
+<img src="images/1585409158005-QOl8N5J430_853-1136.jpg" alt="dfgh" width="250" />
 </body>
 	
 </html>
+s
