--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="stylesheet" href="styles.css"> 
 <meta charset="utf-8">
 <title>My blog</title>
 </head>
@@ -8,10 +9,12 @@
 <body>
 	
 <h1>Hello</h1>
-	<a href="aboutme.html" > About Me</a>
-	<p>lululullulullulul&nbsp;</p>
+	<ul><li><a href="../F4D34_Bobo_Wong_ex03/mygallery.html" > gallery</a></li>
+		<li><a href="../F4D34_Bobo_Wong_ex03/index.html">Home</a></li>
+		<li><a href="../F4D34_Bobo_Wong_ex03/aboutme.html">About Me</a></li></ul>
+	<p style="background-color: antiquewhite">lululullulullulul&nbsp;</p>
 	
-<p><img src="images//hello.jpg" alt="zxw" width="450"/><img src="1585409158005-QOl8N5J430_853-1136.jpg" width="210" height="280" alt=""/></p>
+<p><img src="../F4D34_Bobo_Wong_ex02/images/hello.jpg" alt="zxw" width="450"/><img src="../F4D34_Bobo_Wong_ex02/1585409158005-QOl8N5J430_853-1136.jpg" width="210" height="280" alt=""/></p>
 	
 </body>
 </html>
