--- a/mygallery.html
+++ b/mygallery.html
@@ -11,8 +11,8 @@
 
 <body>
 	<h1>My Gallery </h1>
-	<ul><li><a href="index.html">Home</a></li>
-		<li><a href="aboutme.html">About Me</a></li></ul>
+	<ul><li><a href="../F4D34_Bobo_Wong_ex04/index.html">Home</a></li>
+		<li><a href="../F4D34_Bobo_Wong_ex04/aboutme.html">About Me</a></li></ul>
 	<p>R1SE</p>
 <img src="images/hehehehehehe.jpg" alt="vbn" width="250">
 </body>
