--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
 	
 <h1>Hello</h1>
-	<ul><li><a href="../F4D34_Bobo_Wong_ex03/mygallery.html" > gallery</a></li>
-		<li><a href="../F4D34_Bobo_Wong_ex03/index.html">Home</a></li>
-		<li><a href="../F4D34_Bobo_Wong_ex03/aboutme.html">About Me</a></li></ul>
-	<p style="background-color: antiquewhite">lululullulullulul&nbsp;</p>
+	<ul><li ><a href="../F4D34_Bobo_Wong_ex04/mygallery.html" > gallery</a></li>
+		<li ><a href="../F4D34_Bobo_Wong_ex04/index.html">Home</a></li>
+		<li><a href="../F4D34_Bobo_Wong_ex04/aboutme.html">About Me</a></li></ul>
+	<p id="myp">lululhmjhjmmgftynnnnnnllulul&nbsp;</p>
+	<p id="myid">lululujmhjmnnnllulul&nbsp;</p>
+	<p class = >lululullulunnnnnnnnllulul&nbsp;</p>
+<p class = >lululullulunnnnnnnnllulul&nbsp;</p>
+	<p class = >lululullulunnnnnnnnllulul&nbsp;</p>
 	
 <p><img src="../F4D34_Bobo_Wong_ex02/images/hello.jpg" alt="zxw" width="450"/><img src="../F4D34_Bobo_Wong_ex02/1585409158005-QOl8N5J430_853-1136.jpg" width="210" height="280" alt=""/></p>
 	
