--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 
 <body>
 	
-<h1>Hello</h1>
-	<ul><li ><a href="../F4D34_Bobo_Wong_ex04/mygallery.html" > gallery</a></li>
+<header>
+  <h1>Hello</h1>
+</header>
+	<main>
+		<aside>
+	    <ul>
+		<li ><a href="../F4D34_Bobo_Wong_ex04/mygallery.html" > gallery</a></li>
 		<li ><a href="../F4D34_Bobo_Wong_ex04/index.html">Home</a></li>
-		<li><a href="../F4D34_Bobo_Wong_ex04/aboutme.html">About Me</a></li></ul>
+		<li><a href="../F4D34_Bobo_Wong_ex04/aboutme.html">About Me</a></li>
+		</ul>
+		</aside>
+		<article>
+			<h2>ddddd</h2>
 	<p id="myp">lululhmjhjmmgftynnnnnnllulul&nbsp;</p>
 	<p id="myid">lululujmhjmnnnllulul&nbsp;</p>
 	<p class = >lululullulunnnnnnnnllulul&nbsp;</p>
@@ -19,6 +28,11 @@
 	<p class = >lululullulunnnnnnnnllulul&nbsp;</p>
 	
 <p><img src="../F4D34_Bobo_Wong_ex02/images/hello.jpg" alt="zxw" width="450"/><img src="../F4D34_Bobo_Wong_ex02/1585409158005-QOl8N5J430_853-1136.jpg" width="210" height="280" alt=""/></p>
+		</article>
+		</main>
 	
+	<footer>
+		bye everyone~~~~~~
+	</footer>
 </body>
 </html>
